<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Perfil">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0000ff"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <!-- Campo para o Sexo -->

        <TextView
            style="@style/TituloPerfilUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/perfil_do_usu_rio"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />
    </RadioGroup>

    <!-- Campo para o Peso -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso_kg"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <!-- Campo para a Altura -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura_cm"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <!-- Campo para a Data de Nascimento -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_de_nascimento"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dd_mm_aaaa"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000ff"
        android:text="@string/cadastrar" />

    <TextView
        android:id="@+id/textViewVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/voltar"
        android:textColor="#0077cc" />

</LinearLayout>
