<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="0dp"
        tools:context=".Config">

        <!-- Opções para o tipo de exercício -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0000ff"
            android:foregroundTint="#FFEB3B"
            android:visibility="visible"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/imageViewSeta"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:contentDescription="Seta de Voltar"
                android:src="@drawable/iconeseta" />

            <TextView
                style="@style/TituloConfiguracoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/configura_es"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16px"
            android:text="@string/tipo_de_exerc_cio"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupExercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16px"
            android:paddingTop="0px">

            <RadioButton
                android:id="@+id/radioButtonCaminhada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caminhada"
                android:textColorHighlight="#673AB7"
                android:textColorLink="#673AB7" />

            <RadioButton
                android:id="@+id/radioButtonCorrida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corrida" />

            <RadioButton
                android:id="@+id/radioButtonBicicleta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicicleta" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16px"
            android:text="@string/unidade_de_velocidade"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupVelocidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16px">

            <RadioButton
                android:id="@+id/radioButtonKmH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_h_quilometro_por_hora" />

            <RadioButton
                android:id="@+id/radioButtonMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_s_metros_por_segundo" />
        </RadioGroup>

        <!-- Opções para Orientação do Mapa -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16px"
            android:text="@string/orienta_o_do_mapa"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupOrientacaoMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16px">

            <RadioButton
                android:id="@+id/radioButtonNenhuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nenhuma_manual" />

            <RadioButton
                android:id="@+id/radioButtonNorthUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/north_up" />

            <RadioButton
                android:id="@+id/radioButtonCourseUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_up" />
        </RadioGroup>

        <!-- Opções para Tipo do Mapa -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16px"
            android:text="@string/tipo_do_mapa"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupTipoMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16px">

            <RadioButton
                android:id="@+id/radioButtonVetorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vetorial" />

            <RadioButton
                android:id="@+id/radioButtonSatelite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat_lite" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonSaveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#03A9F4"
            android:padding="16dp"
            android:text="@string/save_settings"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
