<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".Location">


    <!-- Opções para o tipo de exercício -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#03A9F4"
        android:visibility="visible"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/imageViewSeta"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/seta_de_voltar"
            android:src="@drawable/iconeseta" />

        <TextView
            style="@style/TituloConfiguracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:text="@string/monitoramento"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informa_es_do_cabe_alho" />
</ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/location_main" />

        <Button
            android:id="@+id/getButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_margin="16dp"
            android:background="#03A9F4"
            android:text="@string/obter"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:background="#03A9F4"
            android:text="@string/start"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="#03A9F4"
            android:text="@string/stop"
            android:textColor="@android:color/white" />

    </FrameLayout>


</LinearLayout>